--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./src//assets/icon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>dual_shop</title>
+    <title>Dual Shop</title>
+    <script src="https://kit.fontawesome.com/16dde9de93.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="root"></div>
